{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 87,
  "lineage": "e942281c-33a3-e6d7-574f-09e1ab5a9fd8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nicedev-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-050cd642fd83388e4",
            "arn": "arn:aws:ec2:us-east-2:460480222158:instance/i-0490501ae2d18a85f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0490501ae2d18a85f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-086dab722c2dbc3fd",
            "private_dns": "ip-10-0-0-107.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.107",
            "public_ip": "3.142.198.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7297a1771df1350",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c54ba4ac7dac109",
            "tags": {
              "foo": "bar",
              "name": "dev-nicedev"
            },
            "tags_all": {
              "foo": "bar",
              "name": "dev-nicedev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-06406e5a484af9907"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.nicedev-sg",
            "aws_subnet.nicedev-subnet-1",
            "aws_vpc.nicedev-vpc",
            "data.aws_ami.latest-amazon-linux-image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nicedev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460480222158:internet-gateway/igw-08abea6a75716f51e",
            "id": "igw-08abea6a75716f51e",
            "owner_id": "460480222158",
            "tags": {
              "name": "dev-igw"
            },
            "tags_all": {
              "name": "dev-igw"
            },
            "vpc_id": "vpc-0679d277a316774c7"
          },
          "dependencies": [
            "aws_vpc.nicedev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nicedev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460480222158:route-table/rtb-05ad305f6cb146239",
            "id": "rtb-05ad305f6cb146239",
            "owner_id": "460480222158",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08abea6a75716f51e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "dev-rtb"
            },
            "tags_all": {
              "name": "dev-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0679d277a316774c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nicedev-igw",
            "aws_vpc.nicedev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e7fada8587dbc852",
            "route_table_id": "rtb-05ad305f6cb146239",
            "subnet_id": "subnet-06c54ba4ac7dac109"
          },
          "dependencies": [
            "aws_internet_gateway.nicedev-igw",
            "aws_route_table.nicedev-route-table",
            "aws_subnet.nicedev-subnet-1",
            "aws_vpc.nicedev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nicedev-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460480222158:security-group/sg-06406e5a484af9907",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06406e5a484af9907",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "35.149.67.169/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nicedev-sg",
            "name_prefix": "",
            "owner_id": "460480222158",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "dev-nicedev-sg"
            },
            "tags_all": {
              "name": "dev-nicedev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0679d277a316774c7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nicedev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nicedev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460480222158:subnet/subnet-06c54ba4ac7dac109",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c54ba4ac7dac109",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "460480222158",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-0679d277a316774c7"
          },
          "dependencies": [
            "aws_vpc.nicedev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nicedev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:460480222158:vpc/vpc-0679d277a316774c7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce82afb2516c3769",
            "default_route_table_id": "rtb-00908ae6025779980",
            "default_security_group_id": "sg-045cf09c764e4ccf5",
            "dhcp_options_id": "dopt-09a02bca3670d80ed",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0679d277a316774c7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00908ae6025779980",
            "owner_id": "460480222158",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}